finalized the gpioThru.c program to full functionality and updated the readMe

--- a/hw04/Makefile
+++ b/hw04/Makefile
@@ -5,7 +5,7 @@ CFLAGS  := -O3 -g
 #
 # Programs
 #
-all:	gpioThru gpioToggle
+all:	gpioThru 
 
 gpioToggle: gpioToggle.c beaglebone_gpio.h
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $<
