added some functionality to the program still cannot get motor to spin

--- a/hw06/Makefile
+++ b/hw06/Makefile
@@ -1,17 +1,15 @@
 TOOLS_CFLAGS	:= -Wstrict-prototypes -Wshadow -Wpointer-arith -Wcast-qual \
 		   -Wcast-align -Wwrite-strings -Wnested-externs -Winline \
 		   -W -Wundef -Wmissing-prototypes
-CFLAGS  := --g
+CFLAGS  :=  -g
 #
 # Programs
 #
 all:	lightSeeker
 
-lightSeeker: lightSeeker.c 
-	$(CC) $(CFLAGS) -o $@ $<
-
-gpioThru:  gpioThru.c beaglebone_gpio.h
+lightSeeker: lightSeeker.c beaglebone_gpio.h
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $<
+
 
 #
 # Objects
@@ -21,7 +19,7 @@ gpioThru:  gpioThru.c beaglebone_gpio.h
 	$(CC) $(CFLAGS) $(TOOLS_CFLAGS) -c $< -o $@
 
 clean:
-	rm gpioToggle gpioThru
+	rm *.o lightSeeker
 
 print:
 	@echo LDFLAGS = $(LDFLAGS)
